# GameTest

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  appveyor.yml  build-UCRT64-Release.bat  build-VS2026-Release.bat  build.bat  check.bat  conan-build.bat  conan-depgraph-outdated-pkgs.bat  conan-depgraph.bat  conan-setup.bat  conan_profile  conanfile.old.py  conanfile.py  conanfile.py.old  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cmake/: CPM.cmake
conan-profiles/: ucrt64-debug  ucrt64-release  vs2026-debug  vs2026-release
include/: AssetManager.hpp.old  Bitmap.hpp  CRTPSingleton.h  Game.h  Game.hpp  Hasher.hpp  JobProcessor.hpp  JobProcessorPool.hpp  LoaderJob.hpp  Random.h  Renderer.hpp  Window.hpp
include/Asm/: Math.h
include/Assets/: Model.hpp
include/Jobs/: IJob.hpp  JobProcessor.hpp
include/nasm/: math.h
include/scene/: Scene.hpp
other/glad/: CMakeLists.txt
other/glad-debug/: .gitignore  CMakeLists.txt  build-MinGW-Release.bat
other/glad-debug/include/glad/: gl.h  vulkan.h
other/glad-debug/src/: gl.c  vulkan.c
other/glad-release/: README.txt  build-VS2026-Release.bat
other/glad-release/include/glad/: gl.h  vulkan.h
other/glad-release/src/: gl.c  vulkan.c
other/glad/include/glad/: gl.h  vulkan.h
other/glad/src/: gl.c
src/: AssetManager.hpp.cpp  Bitmap.cpp  CRTPSingleton.cpp  Game.cpp  JobProcessor.cpp  Random.cpp  Renderer.cpp  Window.cpp  main.cpp  main.cpp.old
src/Asm/: math.asm
src/nasm/: math.asm
src/scene/: Scene.cpp
test/: CMakeLists.txt
